update: fixed the declaration of the TypeChecker.java